fixes rating alignment

--- a/static/css/application.scss
+++ b/static/css/application.scss
@@ -81,7 +81,6 @@ h1, h2, h3, h4, h5, h6, legend {
         margin-right: 0.5em;
       }
       .rating {
-        vertical-align: middle;
         font-size: 1.4em;
         color: #ffc90e;
       }
